<resources>
    <string name="app_name">Birthday</string>

    <!--Welcome-->
    <string name="welcome_title_first">Welcome to birthday app!</string>
    <string name="welcome_description_first">Use this app to conveniently store, view, configure reminders for various events - birthday, anniversary, wedding anniversary and other.</string>
    <string name="welcome_title_second">Data synchronization.</string>
    <string name="welcome_description_second">App uses firebase to authentication, store and synchronization data</string>
    <string name="welcome_title_third">The birthday app will be improve...</string>
    <string name="welcome_description_third">We are going to more features in future</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot">Forgot your password</string>

    <string name="name_empty_error">Please input name</string>
    <string name="email_empty_error">Please input email</string>
    <string name="password_empty_error">Please input password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_title">Main</string>
    <string name="type_events_title">Type\'s event</string>
    <string name="calendar_title">Clendar</string>
    <string name="cards_title">Cards</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
